--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,7 +4,7 @@ pidfile=/root/supervisord.pid
 logfile=/root/supervisord.log
 
 [program:vncserver]
-command=/opt/TurboVNC/bin/vncserver -video 640x400
+command=/opt/TurboVNC/bin/vncserver -geometry 640x400
 stdout_logfile=/root/x11vnc.log
 redirect_stderr=true
 
